--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -163,33 +163,34 @@
 				<div class="container">
 					<ul class="pagination">
 						<div class="row">
-							<h2 style="text-align: center; font-weight: bold "> Danh sách khóa học </h2>
+							<h2 style="text-align: center; font-weight: bold ; color: red"> DANH SÁCH KHÓA HỌC</h2>
+							<hr>
 							<ul class="grid">
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="trangdangkykhoahoc.html"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
 											<div class="avatar-list">
 												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
 												<div class="tongbaihoc">71 bài học</div>
 												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
-												<a href="trangdangkykhoahoc.html" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
+												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
 											</div>
 										</div>
 
 										<div class="block_content">
-											<h4 class="block_title"><a href="trangdangkykhoahoc.html" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
+											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Java Web JSP-SERVLET</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
-												<h5 class="course_instructor"><a href="trangdangkykhoahoc.html">Tên giảng viên </br>Java Web Developer</a>
+												<h5 class="course_instructor"><p style="color: blue">Trần Anh Khoa</p>
 														</h5>
 											</div>
 											<div class="item-action"></div>
 											<div class="item_process"></div>
 											<div class="clear"></div>
 											<div>
-												<button style="margin:10px 0 0 50px" class="btn btn-info"> Đăng ký </button>
+												<button style="margin:10px 0 0 50px" class="btn btn-info">Miễn phí</button>
 											</div>
 											<div class="clear"></div>
 										</div>
@@ -200,27 +201,27 @@
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="#"><img src="img/nhapmonlaptrinh.png" height="150" width="300"></a>
 											<div class="avatar-list">
-												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
-												<div class="tongbaihoc">71 bài học</div>
-												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
-												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
+												<div class="hinhgiangvien"><img src="img/nhapmonlaptrinh.png" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
+												<div class="tongbaihoc">5 bài học</div>
+												<div class="thoiluongvideo">Video 12 giờ 30 phút</div>
+												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
 											</div>
 										</div>
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
+											<h4 class="block_title"><a href="#" title="Nhập môn lập trình">Nhập môn lập trình</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
-												<h5 class="course_instructor"><a href="#">Tên giảng viên </br>Java Web Developer</a>
+												<h5 class="course_instructor"><p style="color: blue">Đặng Minh Tuấn</p>
 															</h5>
 											</div>
 											<div class="item-action"></div>
 											<div class="item_process"></div>
 											<div class="clear"></div>
 											<div>
-												<button style="margin:10px 0 0 50px" class="btn btn-info"> Đăng ký </button>
+												<button style="margin:10px 0 0 50px" class="btn btn-info"> Đăng ký</button>
 											</div>
 											<div class="clear"></div>
 										</div>
@@ -231,51 +232,50 @@
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="#"><img src="img/photoshop.png" height="150" width="300"></a>
 											<div class="avatar-list">
-												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
-												<div class="tongbaihoc">71 bài học</div>
-												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
-												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
+												<div class="hinhgiangvien"><img src="img/photoshop.png" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
+												<div class="tongbaihoc">20 bài học</div>
+												<div class="thoiluongvideo">Video 21 giờ 10 phút</div>
+												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">Xem ngay</a>
 											</div>
 										</div>
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
+											<h4 class="block_title"><a href="#" title="Thiết kế web">Thiết kế Web</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
-												<h5 class="course_instructor"><a href="#">Tên giảng viên </br>Java Web Developer</a>
+												<h5 class="course_instructor"><p style="color: blue">Bùi Ngọc Trinh</p>
 																</h5>
 											</div>
 											<div class="item-action"></div>
 											<div class="item_process"></div>
 											<div class="clear"></div>
 											<div>
-												<button style="margin:10px 0 0 50px" class="btn btn-info"> Đăng ký </button>
+												<button style="margin:10px 0 0 50px" class="btn btn-info">Miễn phí</button>
 											</div>
 											<div class="clear"></div>
 										</div>
-								</li>
-
+								</li>								
 
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
 										<div class="block_media">
-											<a href="#"><img src="img/jsp-servlet.jpg" height="150" width="300"></a>
+											<a href="#"><img src="img/timhieuangular.png" height="150" width="300"></a>
 											<div class="avatar-list">
-												<div class="hinhgiangvien"><img src="img/jsp-servlet.jpg" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
-												<div class="tongbaihoc">71 bài học</div>
-												<div class="thoiluongvideo">Video 16 giờ 10 phút</div>
+												<div class="hinhgiangvien"><img src="img/timhieuangular.png" class="avatar-course" alt="Profile Photo" width="32" height="32"></div>
+												<div class="tongbaihoc">25 bài học</div>
+												<div class="thoiluongvideo">Video 10 giờ 40 phút</div>
 												<a href="#" class="btn-info xemngaykhoahoc showbuttontrangchu">XEM NGAY</a>
 											</div>
 										</div>
 										<div class="block_content">
-											<h4 class="block_title"><a href="#" title="Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến">Cốt lõi Java Web JSP-SERVLET core qua dự án Web Học Toeic trực tuyến</a></h4>
+											<h4 class="block_title"><a href="#" title="Tìm hiểu Angular">Tìm hiểu Angular</a></h4>
 
 											<div class="item-instructor">
 												<img src="img/logo.jpg" class="avatar-course " alt="Profile Photo" height="32" width="32">
-												<h5 class="course_instructor"><a href="#">Tên giảng viên </br>Java Web Developer</a>
-																	</h5>
+												<h5 class="course_instructor"><p style="color: blue">Dương Đình Hiếu</p>
+												</h5>
 											</div>
 											<div class="item-action"></div>
 											<div class="item_process"></div>
@@ -286,8 +286,6 @@
 											<div class="clear"></div>
 										</div>
 								</li>
-
-
 
 								<li class="col-md-3 clear4">
 									<div class="block courseitem">
