--- a/WebsiteCaNhan4/trangchu.html
+++ b/WebsiteCaNhan4/trangchu.html
@@ -73,7 +73,7 @@
 							</div>
 							<button type="button" data-toggle="collapse" data-target=".navigation" class="navbar-toggle edugate-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 						</div>
-						 <div class="col-sm-3 col-md-3">
+						 <div class="col-xs-2 col-sm-2 col-md-3" style=">
 					        <form class="navbar-form" role="search">
 					        <div class="input-group">
 					            <input type="text" class="form-control" placeholder="Search" name="q">
