--- a/WebsiteCaNhan4/trangphanhoi.html
+++ b/WebsiteCaNhan4/trangphanhoi.html
@@ -131,22 +131,7 @@
 <!-- /Header -->
 		<!--Content-->
 		<div class="content">
-			<!--Navbar-->
-			<div class="navbar">
-				<nav class="navbar navbar-light" style="background-color: #1B5A96;">
-					<ul class="nav navbar-nav">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Trang Chủ <span class="sr-only">(current)</span></a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Giới thiệu</a>
-						</li>
-
-					</ul>
-				</nav>
-			</div>
-			<!-- End Navbar-->
-
+			
 			<!--Chia Khung-->
 			<div class="container-fluid">
 				<div class="row ">
@@ -161,24 +146,26 @@
 				            </ul>
 				   
 				    </div><!-- /col-3 -->
-					<div class="col-md-9 table-content">
+					<div class="col-md-9">
 						<div class="tab-pane " id="gui-thu">
+							<div class="panel panel-default">	
+								<div class="panel-heading">
+									<div class="panel-title">Gửi phản hồi bài tập</div>
+								</div>	
+								<div class="panel-body">			
+									<div class="form-group">
 
-
-							<h1 class="content-title">Gửi phản hồi bài tập</h1>
-							<div class="col-md-12">
-								<div class="form-group">
-
-									<input type="text" class="form-control" placeholder="Gửi đến (Tên đăng nhập hoặc Tên người nhận)
-									" />
-								</div>
-								<div class="form-group">
-									<input type="text" class="form-control" placeholder="Tiêu đề
-									" />
-								</div>
-								<textarea class="form-control" placeholder="Nội dung phản hồi"></textarea>
-								<div class="btn-send">
-									<button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-send"></span> Gửi</button>
+										<input type="text" class="form-control" placeholder="Gửi đến (Tên đăng nhập hoặc Tên người nhận)
+										" />
+									</div>
+									<div class="form-group">
+										<input type="text" class="form-control" placeholder="Tiêu đề
+										" />
+									</div>
+									<textarea class="form-control" placeholder="Nội dung phản hồi"></textarea>
+									<div class="btn-send">
+										<button class="btn btn-success btn-lg"><span class="glyphicon glyphicon-send"></span> Gửi</button>
+									</div>
 								</div>
 							</div>
 						</div>
