--- a/WebsiteCaNhan4/trangthongbao.html
+++ b/WebsiteCaNhan4/trangthongbao.html
@@ -190,6 +190,8 @@
 					      <label for="comment">Nội dung:</label>
 					      <textarea class="form-control" rows="5" id="comment"></textarea>
 					    </div>
+               <button type="button" class="btn btn-success">Lưu</button>
+               <a href="" class="primary">Hủy</a>
 			   		</div>
 			   </div>
 			  </div>
